--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "5.2.7",
+    "@angular/cdk": "5.2.4",
     "@angular/common": "5.2.7",
     "@angular/compiler": "5.2.7",
     "@angular/core": "5.2.7",
     "@angular/forms": "5.2.7",
     "@angular/http": "5.2.7",
+    "@angular/material": "5.2.4",
     "@angular/platform-browser": "5.2.7",
     "@angular/platform-browser-dynamic": "5.2.7",
     "@angular/platform-server": "5.2.9",
@@ -34,6 +36,7 @@
     "compression": "1.7.2",
     "core-js": "2.5.3",
     "express": "4.16.2",
+    "hammerjs": "2.0.8",
     "rxjs": "5.5.6",
     "zone.js": "0.8.20"
   },
