--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "@angular/platform-browser-dynamic": "5.2.7",
     "@angular/platform-server": "5.2.9",
     "@angular/router": "5.2.7",
+    "angular-font-awesome": "3.1.2",
+    "class-transformer": "0.1.9",
     "compression": "1.7.2",
     "core-js": "2.5.3",
     "express": "4.16.2",
+    "font-awesome": "4.7.0",
     "hammerjs": "2.0.8",
     "rxjs": "5.5.6",
     "zone.js": "0.8.20"
