--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "4.16.2",
     "font-awesome": "4.7.0",
     "hammerjs": "2.0.8",
+    "html5shiv": "3.7.3",
     "rxjs": "5.5.6",
     "zone.js": "0.8.20"
   },
