--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "@angular/platform-browser-dynamic": "5.2.7",
     "@angular/platform-server": "5.2.9",
     "@angular/router": "5.2.7",
+    "@ng-bootstrap/ng-bootstrap": "1.1.2",
+    "@ngx-translate/core": "9.1.1",
+    "@ngx-translate/http-loader": "3.0.1",
     "angular-font-awesome": "3.1.2",
+    "bootstrap-css-only": "4.1.0",
     "class-transformer": "0.1.9",
     "compression": "1.7.2",
     "core-js": "2.5.3",
